--- a/src/css/layout/footer.css
+++ b/src/css/layout/footer.css
@@ -3,13 +3,15 @@
     color: white; /* Texte en blanc pour contraster */
     padding: 20px; /* Ajoute de l'espace interne */
     text-align: center; /* Centre le texte */
-    font-size: 0.9rem; /* Taille de police légèrement réduite */
+    font-size: 1.5rem; /* Taille de police légèrement réduite */
+    width: 390px;
 }
 
 .footer .section-pieddepage li {
     list-style: none;
     display: inline-block; 
     margin: 0 10px; 
+
   }
 
     
